--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,17 @@ services:
         build: docker/web
         links:
             - db
-            - mail
         volumes:
             - ./:/app
         ports:
             - "8080:8080"
-            - "8081:8081"
     db:
-        image: "mysql:5.6"
+        image: "mysql:5.7"
         environment:
-            MYSQL_ROOT_PASSWORD: sample
-            MYSQL_DATABASE: sample
-            MYSQL_USER: sample
-            MYSQL_PASSWORD: sample
+            MYSQL_ROOT_PASSWORD: homestead
+            MYSQL_DATABASE: homestead
+            MYSQL_USER: homestead
+            MYSQL_PASSWORD: secret
         ports:
             - "3306:3306"
 
